Set camel-quarkus.version to 1.1.0

--- a/timer-log-main/pom.xml
+++ b/timer-log-main/pom.xml
@@ -28,7 +28,7 @@
     <description>Camel Quarkus Example :: Timer to Log Main</description>
 
     <properties>
-        <camel-quarkus.version>1.2.0-SNAPSHOT</camel-quarkus.version>
+        <camel-quarkus.version>1.1.0</camel-quarkus.version>
         <quarkus.version>1.8.1.Final</quarkus.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
