--- a/timer-log-kotlin/pom.xml
+++ b/timer-log-kotlin/pom.xml
@@ -28,7 +28,7 @@
     <description>Camel Quarkus Example :: Timer to Log Kotlin</description>
 
     <properties>
-        <camel-quarkus.version>1.2.0-SNAPSHOT</camel-quarkus.version>
+        <camel-quarkus.version>1.1.0</camel-quarkus.version>
         <quarkus.version>1.8.1.Final</quarkus.version>
         <kotlin.version>1.3.21</kotlin.version>
 
