--- a/rest-json/pom.xml
+++ b/rest-json/pom.xml
@@ -28,8 +28,8 @@
     <description>Camel Quarkus Example :: Rest Json</description>
 
     <properties>
-        <camel-quarkus.version>1.1.0</camel-quarkus.version>
-        <quarkus.version>1.8.0.Final</quarkus.version>
+        <camel-quarkus.version>1.2.0-SNAPSHOT</camel-quarkus.version>
+        <quarkus.version>1.8.1.Final</quarkus.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
