--- a/timer-log-xml/src/main/resources/application.properties
+++ b/timer-log-xml/src/main/resources/application.properties
@@ -30,4 +30,6 @@ camel.context.name = quarkus-camel-example-timer-log-xml
 #
 # Camel Main
 #
-camel.main.xml-routes = file:src/main/resources/routes/my-routes.xml
+#camel.main.xml-routes = file:src/main/resources/routes/my-routes.xml
+camel.main.xml-routes = classpath:routes/my-routes.xml
+quarkus.camel.native.resources.include-patterns = routes/*.xml 
