--- a/timer-log-xml/src/main/resources/application.properties
+++ b/timer-log-xml/src/main/resources/application.properties
@@ -30,4 +30,7 @@ camel.context.name = quarkus-camel-example-timer-log-xml
 #
 # Camel Main
 #
-camel.main.xml-routes = file:src/main/resources/routes/my-routes.xml
+camel.main.xml-routes = classpath:routes/my-routes.xml
+
+# TODO remove this after Camel Quarkus 1.2.0 https://github.com/apache/camel-quarkus/issues/1901
+quarkus.camel.native.resources.include-patterns = routes/*.xml
