Replace usage of xml-routes property with routes-include-pattern

--- a/file-split-log-xml/src/main/resources/application.properties
+++ b/file-split-log-xml/src/main/resources/application.properties
@@ -25,7 +25,8 @@ quarkus.log.category."org.apache.camel.main".level = DEBUG
 # Camel
 #
 camel.context.name = camel-quarkus-xml
-camel.main.xml-routes = file:src/main/resources/routes/camel-routes.xml
+camel.main.routes-include-pattern = file:src/main/resources/routes/camel-routes.xml
 camel.file.route.folder = src/main/resources/file
 camel.file.repeat.interval = 30000
 camel.file.split.parallel = false
+
