--- a/timer-log-xml/src/main/resources/application.properties
+++ b/timer-log-xml/src/main/resources/application.properties
@@ -30,4 +30,4 @@ camel.context.name = quarkus-camel-example-timer-log-xml
 #
 # Camel Main
 #
-camel.main.xml-routes = classpath:routes/my-routes.xml
+camel.main.routes-include-pattern= classpath:routes/my-routes.xml
