Add tests to example projects apache/camel-quarkus#1501

--- a/file-split-log-xml/src/main/resources/application.properties
+++ b/file-split-log-xml/src/main/resources/application.properties
@@ -18,8 +18,7 @@
 # Quarkus
 #
 quarkus.banner.enabled = false
-
-quarkus.log.category."org.apache.camel.main".level = DEBUG
+quarkus.log.file.enable = true
 
 #
 # Camel
@@ -29,4 +28,3 @@ camel.main.routes-include-pattern = file:src/main/resources/routes/camel-routes.
 camel.file.route.folder = src/main/resources/file
 camel.file.repeat.interval = 30000
 camel.file.split.parallel = false
-
