--- a/timer-log/src/main/resources/application.properties
+++ b/timer-log/src/main/resources/application.properties
@@ -18,9 +18,9 @@
 # Quarkus
 #
 quarkus.banner.enabled = false
+quarkus.log.file.enable = true
 
 #
 # Camel
 #
 camel.context.name = quarkus-camel-example-timer-log
-
