Add a note to file-bindy-ftp README about k8s client and self signed certs

--- a/file-bindy-ftp/src/main/resources/application.properties
+++ b/file-bindy-ftp/src/main/resources/application.properties
@@ -35,6 +35,9 @@ ftp.password = {{env:FTP_PASSWORD:ftppassword}}
 
 # Kubernetes
 
+# Uncomment to trust self signed certificates if they are presented by the Kubernetes API server
+#quarkus.kubernetes-client.trust-certs=true
+
 # Add the FTP server credentials secret to the application Pod
 quarkus.kubernetes.env.secrets=ftp-credentials
 
