--- a/health/src/main/resources/application.properties
+++ b/health/src/main/resources/application.properties
@@ -37,23 +37,26 @@ camel.main.route-controller-back-off-max-attempts = 10
 # then we can control whether the route should be influence the health-check
 # and report the route as either UNKNOWN or DOWN. Setting this option to true
 # will report it as DOWN otherwise its UNKNOWN
-###camel.main.route-controller-unhealthy-on-exhausted = true
+#camel.main.route-controller-unhealthy-on-exhausted = true
 
 # enable health check (is automatic enabled if discovered on classpath)
 # global flag to enable/disable
 camel.health.enabled = true
+
 # context check is default included but we can turn it on|off
 camel.health.context-enabled = true
+
 # routes check is default included but we can turn it on|off
 camel.health.routes-enabled = true
+
 # registry check is default included but we can turn it on|off
 camel.health.registry-enabled = true
 
 # you can turn on or off individual routes as shown below
-### camel.heath.config[timer].parent = routes
-### camel.heath.config[timer].enabled = true
-### camel.heath.config[netty].check = routes
-### camel.heath.config[netty].enabled = false
+#camel.heath.config[timer].parent = routes
+#camel.heath.config[timer].enabled = true
+#camel.heath.config[netty].check = routes
+#camel.heath.config[netty].enabled = false
 
 # and configure each individually
 camel.health.config[timer].parent = routes
@@ -64,14 +67,14 @@ camel.health.config[netty].failure-threshold = 10
 
 # find grained routes configuration per route (support wildcards)
 # (enabled is default true for discovered health-checks)
-### camel.health.config[*].enabled = true
+#camel.health.config[*].enabled = true
 
 # allow 5 failures with 10s apart as slack to handle routes being flaky
 # however if after 5 failures then the state will be regarded as DOWN onwards
 # (the route can recover and the state will then be UP)
-###camel.health.config[*].parent = routes
-###camel.health.config[*].interval = 10s
-###camel.health.config[*].failure-threshold = 5
+#camel.health.config[*].parent = routes
+#camel.health.config[*].interval = 10s
+#camel.health.config[*].failure-threshold = 5
 
 # properties used in the route
 myPeriod = 10s
