--- a/timer-log-xml/pom.xml
+++ b/timer-log-xml/pom.xml
@@ -28,8 +28,8 @@
     <description>Camel Quarkus Example :: Timer to Log XML</description>
 
     <properties>
-        <camel-quarkus.version>1.7.0</camel-quarkus.version>
-        <quarkus.version>1.12.0.Final</quarkus.version>
+        <camel-quarkus.version>1.8.0</camel-quarkus.version>
+        <quarkus.version>1.13.0.Final</quarkus.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -79,7 +79,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-xml-io</artifactId>
+            <artifactId>camel-quarkus-xml-io-dsl</artifactId>
         </dependency>
 
         <!-- Test -->
@@ -209,7 +209,7 @@
                     <workingDir>${project.basedir}</workingDir>
                 </configuration>
             </plugin>
-        
+
             <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
