--- a/timer-log-xml/pom.xml
+++ b/timer-log-xml/pom.xml
@@ -28,8 +28,8 @@
     <description>Camel Quarkus Example :: Timer to Log XML</description>
 
     <properties>
-        <camel-quarkus.version>1.8.1</camel-quarkus.version>
-        <quarkus.version>1.13.0.Final</quarkus.version>
+        <camel-quarkus.version>2.0.0-SNAPSHOT</camel-quarkus.version>
+        <quarkus.version>2.0.0.Alpha3</quarkus.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
