--- a/timer-log-spring/pom.xml
+++ b/timer-log-spring/pom.xml
@@ -28,8 +28,8 @@
     <description>Camel Quarkus Example :: Timer to Log Spring</description>
 
     <properties>
-        <camel-quarkus.version>1.8.1</camel-quarkus.version>
-        <quarkus.version>1.13.0.Final</quarkus.version>
+        <camel-quarkus.version>2.0.0</camel-quarkus.version>
+        <quarkus.version>2.0.0.Alpha3</quarkus.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -202,7 +202,7 @@
                     </execution>
                 </executions>
             </plugin>
-        
+
             <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
