Use MP config instead of System.getProperty() in a test to simplify testing against manuanlly started services

--- a/file-bindy-ftp/src/main/resources/application.properties
+++ b/file-bindy-ftp/src/main/resources/application.properties
@@ -28,10 +28,10 @@ timer.delay = 10000
 csv.location = {{sys:java.io.tmpdir}}/books
 
 # FTP server location
-ftp.host = {{env:FTP_SERVER_SERVICE_HOST:localhost}}
-ftp.port = {{env:FTP_SERVER_SERVICE_PORT:2222}}
-ftp.username = {{env:FTP_USER:ftpuser}}
-ftp.password = {{env:FTP_PASSWORD:ftppassword}}
+ftp.host = ${FTP_SERVER_SERVICE_HOST:localhost}
+ftp.port = ${FTP_SERVER_SERVICE_PORT:2222}
+ftp.username = ${FTP_USER:ftpuser}
+ftp.password = ${FTP_PASSWORD:ftppassword}
 
 # Kubernetes
 
