Use Camel REST DSL in REST JSON example

--- a/rest-json/pom.xml
+++ b/rest-json/pom.xml
@@ -63,11 +63,11 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-platform-http</artifactId>
+            <artifactId>camel-quarkus-jackson</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-jackson</artifactId>
+            <artifactId>camel-quarkus-rest</artifactId>
         </dependency>
 
         <!-- test dependencies -->
